deployment/digital-ocean-kuberenetes-cluster/echo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
  - hosts:
    - explore.f1-platform.zawalich.pl
    - minio.f1-platform.zawalich.pl
    - storage.f1-platform.zawalich.pl
    - models.f1-platform.zawalich.pl
    - classify.f1-platform.zawalich.pl
    - recognize.f1-platform.zawalich.pl
    - academy.f1-platform.zawalich.pl
    - monitoring.f1-platform.zawalich.pl
    - aggregate.f1-platform.zawalich.pl
    secretName: echo-tls
  rules:
  - host: explore.f1-platform.zawalich.pl
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: data-dashboard-service
              port:
                number: 8080
  - host: minio.f1-platform.zawalich.pl
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: minio-service
              port:
                number: 9000
  - host: storage.f1-platform.zawalich.pl
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: minio-dashboard-service
              port:
                number: 9001
  - host: models.f1-platform.zawalich.pl
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: mlflow-dashboard-service
              port:
                number: 8080
  - host: classify.f1-platform.zawalich.pl
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: classification-model-service
              port:
                number: 8080
  - host: recognize.f1-platform.zawalich.pl
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: recognition-model-service
              port:
                number: 8080
  - host: academy.f1-platform.zawalich.pl
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: driver-dashboard-service
              port:
                number: 8080
  - host: monitoring.f1-platform.zawalich.pl
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: prometheus-service
              port:
                number: 8080
  - host: aggregate.f1-platform.zawalich.pl
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: grafana-service
              port:
                number: 8080
